--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
-  "name": "vocabularyclozes",
-  "version": "1.0.0",
-  "description": "",
+  "name": "vocabforge",
+  "private": true,
+  "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "test": "node scripts/tests/run-tests.js"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "test": "node scripts/tests/run-tests.js",
+    "seed:csv": "node scripts/admin/seed-exercises.mjs csv",
+    "seed:ai": "node scripts/admin/seed-exercises.mjs ai"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
+    "framer-motion": "^12.4.7",
+    "jotai": "^2.12.2",
+    "lucide-react": "^0.511.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.10",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^0.21.1"
+  }
 }
