chore: resolve merge hotspots in app shell, vite config, and scripts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "typecheck": "tsc -b --pretty false",
     "preview": "vite preview",
     "test": "node scripts/tests/run-tests.js",
     "seed:csv": "node scripts/admin/seed-exercises.mjs csv",
