Fix GitHub Pages Vite base path and production build output

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,5 +16,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src/main.tsx", "src/App.tsx", "src/legacy/**/*.ts", "src/store/**/*.ts", "src/vite-env.d.ts"]
 }
